; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_textransform.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_textransform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i32 }
%struct.wined3d_state = type { i32 }

@WINED3D_SHADER_TYPE_PIXEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_context*, %struct.wined3d_state*, i32)* @textransform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @textransform(%struct.wined3d_context* %0, %struct.wined3d_state* %1, i32 %2) #0 {
  %4 = alloca %struct.wined3d_context*, align 8
  %5 = alloca %struct.wined3d_state*, align 8
  %6 = alloca i32, align 4
  store %struct.wined3d_context* %0, %struct.wined3d_context** %4, align 8
  store %struct.wined3d_state* %1, %struct.wined3d_state** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %8 = load i32, i32* @WINED3D_SHADER_TYPE_PIXEL, align 4
  %9 = call i32 @STATE_SHADER(i32 %8)
  %10 = call i32 @isStateDirty(%struct.wined3d_context* %7, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %3
  %13 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %14 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @fragment_prog_arbfp(%struct.wined3d_context* %13, %struct.wined3d_state* %14, i32 %15)
  br label %17

17:                                               ; preds = %12, %3
  ret void
}

declare dso_local i32 @isStateDirty(%struct.wined3d_context*, i32) #1

declare dso_local i32 @STATE_SHADER(i32) #1

declare dso_local i32 @fragment_prog_arbfp(%struct.wined3d_context*, %struct.wined3d_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
